src/objects/Day_Process__c.object
<CustomObject>
    <fields>
        <fullName>Accounts_Accrured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accounts Accrured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Office_Name__c</referenceTo>
        <relationshipLabel>Day Processes</relationshipLabel>
        <relationshipName>Day_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_Ended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Day Ended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Day_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Day Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Day_Status__c</fullName>
        <formula>IF( Day_Started__c, IF( Day_Ended__c ,&apos;Day Ended Successfully&apos;,&apos;Day Started Successfully&apos;) , &apos;Day has not started&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOD_Finished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOD Finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOD_Process_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOD Process Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FD_Processing_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FD Processing Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Accounting_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Accounting Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Collection_Chart_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Collection Chart Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_History_Tracked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan History Tracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Maturity_Processing_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Maturity Processing Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOD_Process_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOD Process Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Savings_Accrual_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Savings Accrual Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Savings_Collection_Chart_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Savings Collection Chart Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Day Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Ended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Day Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Branch__c</columns>
        <columns>Date__c</columns>
        <columns>Day_Ended__c</columns>
        <columns>Day_Started__c</columns>
        <columns>Day_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DPI-{0000000000}</displayFormat>
        <label>Day Process ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Day Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>